* Mon Jan 23 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Calls to rsyslog::rule no longer contain logic
- Rsync source updated to new location

* Tue Dec 13 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Updated global catalysts
- Strong typed

* Thu Dec 01 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Updated to use the environment-aware rsync in SIMP 6

* Thu Dec 01 2016 Nicholas Hughes, Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Prevent log duplication and log where intended.
- Changed naming to XX_ or YY_ to come before the default Z_default.conf
  for local rules, but after the numbered configs used by the log_server
  class.

* Tue Nov 22 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.0-0
- Update version to reflect SIMP6 dependencies
- Update SIMP6 dependencies
- Minor cleanup

* Tue Nov 15 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 4.1.3-0
- Updated iptables dependency version

* Mon Jul 11 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.1-0
- Migration to semantic versioning and fix of the build system

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-5
- migration to simplib and simpcat (lib/ only)

* Tue Jul 21 2015 Kendall Moore <kmoore@keywcorp.com> - 4.1.0-4
- Updated to use new rsyslog module.

* Fri Feb 27 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-3
- Updated to use the new 'simp' environment.
- Changed calls directly to /etc/init.d/rsyslog to '/sbin/service rsyslog' so
  that both RHEL6 and RHEL7 are properly supported.

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-2
- Changed puppet-server requirement to puppet

* Tue Jun 24 2014 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.0-1
- Modified all checksums to be sha256 instead of md5 in an effort
  to enable FIPS.

* Wed Apr 16 2014 Kendall Moore <kmoore@keywcorp.com>
- Added spec tests.

* Mon Apr 14 2014 Trevor Vaughan <tvaughan@onyxpoint.com>
- Tidied up the code to work with Hiera.
