@@ -1,5 +1,8 @@
 require 'spec_helper'
 
+file_content_7 = "/usr/bin/systemctl restart rsyslog > /dev/null 2>&1 || true"
+file_content_6 = "/sbin/service rsyslog restart > /dev/null 2>&1 || true"
+
 describe 'dhcp::dhcpd' do
   context 'supported operating systems' do
     on_supported_os.each do |os, facts|
@@ -46,6 +49,15 @@ describe 'dhcp::dhcpd' do
           it { is_expected.to create_iptables__rule('allow_bootp') }
           it { is_expected.to create_logrotate__rule('dhcpd') }
           it { is_expected.to contain_rsyslog__rule__local ( 'XX_dhcpd' ) }
+
+          if ['RedHat','CentOS'].include?(facts[:operatingsystem])
+            if facts[:operatingsystemmajrelease].to_s < '7'
+              it { should create_file('/etc/logrotate.d/dhcpd').with_content(/#{file_content_6}/)}
+            else
+              it { should create_file('/etc/logrotate.d/dhcpd').with_content(/#{file_content_7}/)}
+            end
+          end
+
         end
       end
     end
